# BBii-Decon

./: Actin3_GroundTruth.tif  Actin3_blurred.tif  DAPI_blurred.tif  LICENSE  README.md  setup.cfg  tox.ini
.ipynb_checkpoints/: BBii_Decon_2D_2021-new-checkpoint.ipynb
demo/: BBii_Decon_2D_2021.ipynb  BBii_Decon_2D_with_NLM_denoise_2021.ipynb  BBii_Decon_2D_with_NLM_denoise_2021_V2.ipynb  BBii_Decon_2D_with_heuristic_2021.ipynb  DAPI_GroundTruth.tif  PSF.tif  nucleus.tif
src/bbii_decon/: __init__.py
src/bbii_decon/_tests/: test_function.py
