[metadata]
name = bbii-decon
version = 0.0.1
author = Graham Dellaire, Robert Haase
author_email = dellaire@Dal.Ca
url = https://github.com/gdellaire/bbii-decon
license = BSD-3-Clause
description = Projected Barzilai-Borwein Image Deconvolution with Infeasible Iterates (BBii-Decon)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/gdellaire/bbii-decon/issues
    Documentation = https://github.com/gdellaire/bbii-decon#README.md
    Source Code = https://github.com/gdellaire/bbii-decon
    User Support = https://github.com/gdellaire/bbii-decon/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pypher

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    bbii-decon = bbii_decon
